[gd_scene load_steps=3 format=3 uid="uid://d35qvyfik1irs"]

[ext_resource type="Script" uid="uid://c1cfsay8xskax" path="res://Task/FocusAndAttentionTask/Focus_Game.gd" id="1_yjoib"]
[ext_resource type="Texture2D" uid="uid://hqn0rxwoji2f" path="res://Task/ReactionTimeTask/icon.svg" id="2_k7uoe"]

[node name="FocusScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yjoib")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="RedButton" type="TextureButton" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_k7uoe")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="YellowButton" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_k7uoe")

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "               NaN                 
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BlueButton" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_k7uoe")

[node name="GreenButton" type="TextureButton" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_k7uoe")

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="PanelContainer/VBoxContainer/RedButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/YellowButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/BlueButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GreenButton" to="." method="_on_button_pressed"]
